--- a/gallery.html
+++ b/gallery.html
@@ -14,18 +14,23 @@
 	<nav id="navbar">
 	<img id="logo" src="img\Logo.png">
 
-	<p class="title">UMA BREVE LINHA DO TEMPO DA ANTIGUIDADE OCIDENTAL</p>
-	<div class="links">
-		<a href="index.html">GERAL</a>
-		<a href="#" class="deny">ALQUIMIA</a>
-		<a href="#" class="deny">FILOSOFIA</a>
-			<div class="lContainer">
-				<a class="current">GALERIA</a>
-				<a href="#">GLOSSÁRIO</a>
-				<a href="#">SOBRE</a>
-				<span class="mapButton" title="Mapa Interativo" onclick="showSidebar('Mapa')"><i class="fa fa-map-o"></i></span>
-			</div>
+	<h1 class="title">UMA BREVE LINHA DO TEMPO DA ANTIGUIDADE OCIDENTAL</h1>
+	
+	<div class="navbox">
+		<div class="lContainer">
+			<a href="index.html">GERAL</a>
+			<a href="#" class="deny">ALQUIMIA</a>
+			<a href="#" class="deny">FILOSOFIA</a>
+		</div>
+			
+		<div class="rContainer">
+			<a class="current">GALERIA</a>
+			<a href="#" class="deny">GLOSSÁRIO</a>
+			<a href="#" class="deny">SOBRE</a>
+			<span class="mapButton" title="Mapa Interativo" onclick="showSidebar('Mapa')"><i class="fa fa-map-o"></i></span>
+		</div>
 	</div>
+	
 	</nav>
 
 <section class="gallery">
@@ -33,7 +38,7 @@
 <!-- Thumbnails -->
 <div class="row">
 	<div class="column">
-		<img src="img/maps/MapaBase.png" onclick="showSidebar('mBase')" class="hover-shadow">
+		<img src="img/maps/MapaBase.png" onclick="showSidebar('mBase')" class="thumb hover-shadow">
 		<h3>Mapa Topográfico</h3>
 		<p>Geral<br>Placeholder<br>Placeholder</p>
 	</div>
@@ -141,51 +146,6 @@
 	</div>
 	<div class="column">
 		<img src="img/Placeholder.png" onclick="openModal();currentSlide(9)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(10)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(11)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(12)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(13)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(14)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(15)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(16)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(17)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(18)" class="hover-shadow">
 		<h3>Mapa Placeholder</h3>
 		<p>Placeholder<br>Placeholder<br>Placeholder</p>
 	</div>
