--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
 	<div class="column">
 		<img src="img/maps/MapaBase.png" onclick="showSidebar('mBase')" class="thumb hover-shadow">
 		<h3>Mapa Topográfico</h3>
-		<p>Geral<br>Placeholder<br>Placeholder</p>
+		<p>Geral<br>Neolítico<br>13.000 a.C. – 4.000 a.C.</p>
 	</div>
 	<div class="column">
 		<img src="img/maps/Farming.png" onclick="showSidebar('mFarming')" class="hover-shadow">
@@ -50,7 +50,7 @@
 	<div class="column">
 		<img src="img/maps/IndoEuro.png" onclick="showSidebar('mIndoEuro')" class="hover-shadow">
 		<h3>Mapa das migrações indo-européias</h3>
-		<p>Geral<br>Placeholder<br>5.000 a.C. – 800 a.C.</p>
+		<p>Geral<br>Calcolítico – Idade do Ferro<br>5.000 a.C. – 800 a.C.</p>
 	</div>
 	<div class="column">
 		<img src="img/maps/Bronze1.png" onclick="showSidebar('meBA1')" class="hover-shadow">
@@ -93,9 +93,9 @@
 		<p>Europa Ocidental<br>Império Romano<br>37 a.C. – 395 d.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(18)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
+		<img src="img/maps/Ancient3.png" onclick="openModal();currentSlide(18)" class="hover-shadow">
+		<h3>Mapa dos Reinos Bárbaros</h3>
+		<p>Geral<br>Antiguidade Tardia<br>500 d.C.</p>
 	</div>
 </div>
 </section>
