--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="timeline-style.css">
 		<link rel="stylesheet" href="overlays.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/all.css">
+		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 		<link rel="icon" href="img/Logo.png">
 	</head>
 	
@@ -31,7 +32,7 @@
 				<a href="gallery.html">GALERIA</a>
 				<a href="#" class="deny">GLOSSÁRIO</a>
 				<a href="#" class="deny">SOBRE</a>
-				<span class="mapButton" title="Mapa Interativo" onclick="showSidebar('Mapa')"><i class="fa fa-map-o"></i></span>
+				<span class="mapButton" title="Mapa Interativo" onclick="showSidebar('Mapa')"><i class="fa-solid fa-map-location-dot"></i></span>
 			</div>
 		</div>
 	</nav>
@@ -90,7 +91,7 @@
 			
 			<!--Events-->
 			
-			<span class="event event0 eSA0" onmouseenter="showTipG('oSA0')" onmouseleave="hideTip()" onclick="showSidebarG('eSA0')">Revolução do Neolítico <i class="fa fa-map-o"></i></span>
+			<span class="event event0 eSA0" onmouseenter="showTipG('oSA0')" onmouseleave="hideTip()" onclick="showSidebarG('eSA0')">Revolução do Neolítico <i class="fa-regular fa-map"></i></span>
 			<span class="event event0 eLevantS0 levant deny">Fundação da cidade de Jericó</span>
 			<span class="event event0 eLevantS1 levant deny">Fundação da cidade de Biblos</span>
 			<span class="event event0 eSA00 meso deny">Criação da Escrita Cuneiforme</span>
