--- a/Mapa.html
+++ b/Mapa.html
@@ -37,7 +37,7 @@
 <div id="oNorthSea" class="sidetipMap"><h2>MAR DO NORTE</h2></div>
 <div id="oObGulf" class="sidetipMap"><h2>GOLFO DE OB</h2></div>
 <div id="oOmanGulf" class="sidetipMap"><h2>GOLFO DE OMÃ</h2></div>
-<div id="oPersianGulf" class="sidetipMap"><h2>GOLFO PÉRSICO</h2></div>
+<div id="oPersianGulf" class="sidetipMap"><h2>GOLFO PÉRSICO</h2><p>Formado pela enchente causada pelo derretimento das geleiras cerca de 15 mil anos atrás, retrocedeu ao tamanho que tem hoje cerca de 6 mil anos atrás.<br>Este mapa mostra como era quando foi fundada a cidade de Uruque, no tamanho máximo do golfo.</p></div>
 <div id="oRedSea" class="sidetipMap"><h2>MAR VERMELHO</h2></div>
 <div id="oThracianSea" class="sidetipMap"><h2>MAR TRÁCIO</h2></div>
 <div id="oTyrrhenianSea" class="sidetipMap"><h2>MAR TIRRENO</h2></div>
@@ -198,10 +198,10 @@
 			d="m 190.00001,399.99999 -60,-4.99999 -20,10.00001 10,24.99997 -10,30.00002 h 5 v 19.99999 h 25 l 5,10 h 5 l 10,-4.99999 h 25 l 25,-25 -5,-10.00001 15,-20.00001 20,-9.99998 v -5.00002 z"/>
 			
 			
-			<path class="region" id="Peloponnese" onmouseover="showTipMap('oPeloponnese')" onmouseout="hideTipMap('oPeloponnese')"
+			<path class="regionP" id="Peloponnese" onmouseover="showTipMap('oPeloponnese')" onmouseout="hideTipMap('oPeloponnese')"
 			d="m 435.00002,464.99999 -4.99999,4.99999 9.99998,20.00001 L 450.00002,485 445.00003,475 h 10.00001 l -5.00002,-5.00002 -10.00001,-4.99999 z"/>
 			
-			<path class="region" id="Sinai" onmouseover="showTipMap('oSinai')" onmouseout="hideTipMap('oSinai')"
+			<path class="regionS" id="Sinai" onmouseover="showTipMap('oSinai')" onmouseout="hideTipMap('oSinai')"
 			d="m 545.00004,549.99998 v 10 l 15,25.00001 h 4.99999 L 570.00004,565 l -5,-20 -5,5 z"/>
 			
 			
@@ -318,7 +318,7 @@
 			d="m 340.00002,239.99955 -5.00002,5 h -10 l 10e-6,10.00044 L 320.00002,260 h 4.99999 l 20.00001,-10 15,10 40,-15 5.00001,9.99999 9.99998,-4.99999 15.00002,-15 -5.00001,-10 10,-20 h 10.00001 l 4.99999,10 h 10.00001 l 4.99999,-5 v -15 h -9.99998 v -15 l 25,-5 19.99999,5 10,-10 h 15 l -4.99999,-5 h -10.00001 l -4.99999,-5 -55.00002,10 -19.99999,-15 v -30 l 40,-35.000001 V 75 h -30.00002 l -14.99999,35 -25,10 -9.99998,35 14.99999,10 v 15 l -20.00001,10 -10.00001,39.99999 H 360.00002 L 355.00003,240 Z"/>
 			
 			<path class="sea" id="BiscayBay" onmouseover="showTipMap('oBiscayBay')" onmouseout="hideTipMap('oBiscayBay')"
-			d="m 160.00001,334.99999 35,30.00002 V 395 l -5,4.99999 -60,-4.99999 z"/>
+			d="m 160.00001,334.99999 25,20.00001 10,10.00001 V 395 l -5,4.99999 -60,-4.99999 z"/>
 			
 			<path class="sea" id="EnglishChannel" onmouseover="showTipMap('oEnglishChannel')" onmouseout="hideTipMap('oEnglishChannel')"
 			d="m 160.00001,334.99999 -5,-19.99999 5,-5.00002 h 10 l 4.99998,-4.99999 h 35.00002 l 15,-4.99999 v 9.99998 l -25,15.00003 -5,-5.00002 h -5 l 5,15 h -15 l -5,-4.99999 z"/>
