--- a/Ancient1.html
+++ b/Ancient1.html
@@ -54,7 +54,7 @@
 <div id="dCulture" class="sidetipMap"><h2>CULTURA DO DNIEPRE-DUÍNA</h2></div>
 <div id="finns" class="sidetipMap"><h2>FINO-ÚGRICOS</h2></div>
 
-<div id="media" class="sidetipMap"><h2>IMPÉRIO MÉDIO</h2></div>
+<div id="media" class="sidetipMap"><h2>IMPÉRIO MEDO</h2></div>
 <div id="elam" class="sidetipMap"><h2>ELÃO</h2></div>
 <div id="colchis" class="sidetipMap"><h2>CÓLQUIDA</h2></div>
 <div id="iberia" class="sidetipMap"><h2>IBÉRIA</h2><p>Também conhecido pelo nome georgiano <b>Cártlia</b>.<br>Não confundir com a Península Ibérica.</p></div>
