--- a/gallery.html
+++ b/gallery.html
@@ -38,62 +38,62 @@
 <!-- Thumbnails -->
 <div class="row">
 	<div class="column">
-		<img src="img/maps/MapaBase.png" onclick="showSidebar('mBase')" class="thumb hover-shadow">
+		<img src="img/maps/int/MapaBaseT.png" onclick="showSidebar('mBase')" class="thumb hover-shadow">
 		<h3>Mapa Topográfico</h3>
 		<p>Geral<br>Neolítico<br>13.000 a.C. – 4.000 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Farming.png" onclick="showSidebar('mFarming')" class="hover-shadow">
+		<img src="img/maps/int/FarmingT.png" onclick="showSidebar('mFarming')" class="hover-shadow">
 		<h3>Mapa das culturas agrícolas do neolítico</h3>
 		<p>Geral<br>Neolítico<br>12.000 a.C. – 4.000 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/IndoEuro.png" onclick="showSidebar('mIndoEuro')" class="hover-shadow">
+		<img src="img/maps/int/IndoEuroT.png" onclick="showSidebar('mIndoEuro')" class="hover-shadow">
 		<h3>Mapa das migrações indo-européias</h3>
 		<p>Geral<br>Calcolítico – Idade do Ferro<br>5.000 a.C. – 800 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Bronze1.png" onclick="showSidebar('meBA1')" class="hover-shadow">
+		<img src="img/maps/int/Bronze1T.png" onclick="showSidebar('meBA1')" class="hover-shadow">
 		<h3>Mapa composto do período do Bronze Antigo</h3>
 		<p>Geral<br>Bronze Antigo<br>3.300 a.C. – 2.100 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Bronze2.png" onclick="showSidebar('meBA2')" class="hover-shadow">
+		<img src="img/maps/int/Bronze2T.png" onclick="showSidebar('meBA2')" class="hover-shadow">
 		<h3>Mapa composto do período do Bronze Médio</h3>
 		<p>Geral<br>Bronze Médio<br>2.100 a.C. – 1.500 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Bronze3.png" onclick="showSidebar('meBA3')" class="hover-shadow">
+		<img src="img/maps/int/Bronze3T.png" onclick="showSidebar('meBA3')" class="hover-shadow">
 		<h3>Mapa composto do período do Bronze Recente</h3>
 		<p>Geral<br>Bronze Recente<br>1.500 a.C. – 1.200 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/IronAge.png" onclick="showSidebar('meIA0')" class="hover-shadow">
+		<img src="img/maps/int/IronAgeT.png" onclick="showSidebar('meIA0')" class="hover-shadow">
 		<h3>Mapa composto da Idade do Ferro</h3>
 		<p>Geral<br>Idade do Ferro<br>1.200 a.C. – 800 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Ancient1.png" onclick="showSidebar('meAA1')" class="hover-shadow">
+		<img src="img/maps/int/Ancient1T.png" onclick="showSidebar('meAA1')" class="hover-shadow">
 		<h3>Mapa composto da Antiguidade Clássica</h3>
 		<p>Geral<br>Antiguidade Clássica<br>800 a.C. – 300 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Ancient2.png" onclick="showSidebar('mAA2')" class="hover-shadow">
+		<img src="img/maps/int/Ancient2T.png" onclick="showSidebar('mAA2')" class="hover-shadow">
 		<h3>Mapa do Período Helenístico</h3>
 		<p>Geral<br>Período Helenístico<br>300 a.C. – 30 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/IranA2.png" onclick="showSidebar('mIranA2')" class="hover-shadow">
+		<img src="img/maps/int/IranA2T.png" onclick="showSidebar('mIranA2')" class="hover-shadow">
 		<h3>Mapa das satrápias do Império Aquemênida</h3>
 		<p>Planalto Iraniano<br>Império Aquemênida<br>550 a.C. – 330 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/RomeA2.png" onclick="showSidebar('mRomeA2')" class="hover-shadow">
+		<img src="img/maps/int/RomeA2T.png" onclick="showSidebar('mRomeA2')" class="hover-shadow">
 		<h3>Mapa das províncias do Império Romano</h3>
 		<p>Europa Ocidental<br>Império Romano<br>37 a.C. – 395 d.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Ancient3.png" onclick="openModal();currentSlide(18)" class="hover-shadow">
+		<img src="img/maps/int/Ancient3T.png" onclick="openModal();currentSlide(18)" class="hover-shadow">
 		<h3>Mapa dos Reinos Bárbaros</h3>
 		<p>Geral<br>Antiguidade Tardia<br>500 d.C.</p>
 	</div>
@@ -105,49 +105,49 @@
 <!-- Thumbnails -->
 <div class="row">
 	<div class="column">
-		<img src="img/maps/EgyptS0.png" onclick="openModal();currentSlide(1)" class="hover-shadow">
+		<img src="img/maps/thumbs/EgyptS0T.png" onclick="openModal();currentSlide(1)" class="hover-shadow">
 		<h3>Mapa do Alto e Baixo Egito</h3>
 		<p>Egito<br>Período Pré-Histórico<br> Antes de 3150 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/EgyptB1.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
+		<img src="img/maps/thumbs/EgyptB1T.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
 		<h3>Mapa do Egito Unificado</h3>
 		<p>Egito<br>Época Tinita<br>3150 a.C. – 2686 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/EgyptB4.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
+		<img src="img/maps/thumbs/EgyptB4T.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
 		<h3>Mapa do Egito durante o Império Médio</h3>
 		<p>Egito<br>Império Médio<br>2040 a.C. – 1700 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/EgyptB6.png" onclick="openModal();currentSlide(4)" class="hover-shadow">
+		<img src="img/maps/thumbs/EgyptB6T.png" onclick="openModal();currentSlide(4)" class="hover-shadow">
 		<h3>Mapa do Egito durante o Império Novo</h3>
 		<p>Egito<br>Império Novo<br>1550 a.C. – 1070 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/EgyptI1.png" onclick="openModal();currentSlide(5)" class="hover-shadow">
+		<img src="img/maps/thumbs/EgyptI1T.png" onclick="openModal();currentSlide(5)" class="hover-shadow">
 		<h3>Mapa do Reino de Cuxe</h3>
 		<p>Egito<br>Terceiro Período Intermédio<br>1090 a.C. – 664 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(6)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
+		<img src="img/maps/thumbs/EgyptA1T.png" onclick="openModal();currentSlide(6)" class="hover-shadow">
+		<h3>Mapa do Oriente Próximo, século 6 a.C.</h3>
+		<p>Oriente Próximo<br>Século VI<br>600 a.C. – 550 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(7)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
+		<img src="img/maps/thumbs/GreeceA2T.png" onclick="openModal();currentSlide(7)" class="hover-shadow">
+		<h3>Mapa do Império Macedônico em sua maior extensão.</h3>
+		<p>Gregos<br>Império Macedônico<br>330 a.C. - 323 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(8)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
+		<img src="img/maps/thumbs/EgyptA4T.png" onclick="openModal();currentSlide(8)" class="hover-shadow">
+		<h3>Mapa do Egito Ptolemaico, 235 a.C.</h3>
+		<p>Egito<br>Dinastia Ptolemaica<br>305 a.C - 30 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(9)" class="hover-shadow">
-		<h3>Mapa Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
+		<img src="img/maps/thumbs/EgyptA5T.png" onclick="openModal();currentSlide(9)" class="hover-shadow">
+		<h3><i>Provincia Aegypti</i> dentro do Império Romano, c. 125 d.C.</h3>
+		<p>Egito<br>Egito Romano<br>30 a.C - 641 d.C.</p>
 	</div>
 </div>
 </section>
@@ -157,94 +157,64 @@
 <!-- Thumbnails -->
 <div class="row">
 	<div class="column">
-		<img src="img/EgyptB2.png" onclick="openModal();currentSlide(19)" class="hover-shadow">
+		<img src="img/EgyptB2.png" onclick="openModal();currentSlide(10)" class="hover-shadow">
 		<h3>Pirâmides de Gizé</h3>
 		<p>Egito<br>Império Antigo<br>2700 a.C. – 2200 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/EgyptB3.png" onclick="openModal();currentSlide(20)" class="hover-shadow">
+		<img src="img/EgyptB3.png" onclick="openModal();currentSlide(11)" class="hover-shadow">
 		<h3>Faraó Mentuotep II</h3>
 		<p>Egito<br>Primeiro Período Intermédio<br>2181 a.C. – 2055 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/EgyptB5.png" onclick="openModal();currentSlide(21)" class="hover-shadow">
+		<img src="img/EgyptB5.png" onclick="openModal();currentSlide(12)" class="hover-shadow">
 		<h3>Sírios trazendo presentes</h3>
 		<p>Egito<br>Segundo Período Intermédio<br>1700 a.C. – 1550 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/MesoB1.png" onclick="openModal();currentSlide(22)" class="hover-shadow">
+		<img src="img/MesoB1.png" onclick="openModal();currentSlide(13)" class="hover-shadow">
 		<h3>Rei entronado do Estandarte de Ur</h3>
 		<p>Suméria<br>Período Dinástico<br>2900 a.C. – 2400 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/MesoB4.png" onclick="openModal();currentSlide(23)" class="hover-shadow">
+		<img src="img/MesoB3.png" onclick="openModal();currentSlide(14)" class="hover-shadow">
+		<h3>O Grande Zigurate de Ur</h3>
+		<p>Suméria<br>Império Neossumério<br>2112 a.C. – 2004 a.C.</p>
+	</div>
+	<div class="column">
+		<img src="img/MesoB4.png" onclick="openModal();currentSlide(15)" class="hover-shadow">
 		<h3>O rei Hamurabi recebe sua insíginia real do deus Shamash</h3>
 		<p>Babilônia<br>Primeiro Império Babilônico<br>1894 a.C. – 1595 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/MesoI1.png" onclick="openModal();currentSlide(24)" class="hover-shadow">
+		<img src="img/MesoI1.png" onclick="openModal();currentSlide(16)" class="hover-shadow">
 		<h3>Grifo sendo atacado por herói</h3>
 		<p>Assíria<br>Médio Império Assírio<br>1363 a.C. – 912 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/LevantI0.png" onclick="openModal();currentSlide(25)" class="hover-shadow">
+		<img src="img/LevantI0.png" onclick="openModal();currentSlide(17)" class="hover-shadow">
 		<h3>Delegação de Israelitas do Obelisco Negro</h3>
 		<p>Israel<br>Idade do Ferro<br>1200 a.C. – 800 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/LevantA3.png" onclick="openModal();currentSlide(26)" class="hover-shadow">
+		<img src="img/LevantA3.png" onclick="openModal();currentSlide(18)" class="hover-shadow">
 		<h3>Pedra de Magdala</h3>
 		<p>Judá<br>Período do Segundo Templo<br>516 a.C. – 70 d.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(27)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/IranB2.png" onclick="openModal();currentSlide(28)" class="hover-shadow">
+		<img src="img/IranB2.png" onclick="openModal();currentSlide(19)" class="hover-shadow">
 		<h3>Delegação de citas trazendo tributos para o palácio de Persépolis</h3>
 		<p>Planalto Iraniano<br>Período Avéstico<br>1500 a.C. – 500 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(29)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(30)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/GreeceB0.png" onclick="openModal();currentSlide(31)" class="hover-shadow">
+		<img src="img/GreeceB1.png" onclick="openModal();currentSlide(19)" class="hover-shadow">
 		<h3>Taurocatapsia do palácio de Cnossos</h3>
 		<p>Creta<br>Período Minoano<br>3100 a.C. – 1100 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(32)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(33)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/RomeA0.png" onclick="openModal();currentSlide(34)" class="hover-shadow">
+		<img src="img/RomeA0.png" onclick="openModal();currentSlide(20)" class="hover-shadow">
 		<h3>Lupa Capitolina</h3>
 		<p>Roma<br>Reino de Roma<br>753 a.C. – 509 a.C.</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(35)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
-	</div>
-	<div class="column">
-		<img src="img/Placeholder.png" onclick="openModal();currentSlide(36)" class="hover-shadow">
-		<h3>Placeholder</h3>
-		<p>Placeholder<br>Placeholder<br>Placeholder</p>
 	</div>
 </div>
 </section>
@@ -276,62 +246,23 @@
 			<p class="caption">Mapa do Reino de Cuxe</p>
 		</div>
 		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
+			<img src="img/maps/EgyptA1.png" style="width:100%">
+			<p class="caption">Mapa do Oriente Próximo, século 6 a.C.</p>
 		</div>
 		
 		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
+			<img src="img/maps/GreeceA2.png" style="width:100%">
+			<p class="caption">Mapa do Império Macedônico em sua maior extensão, 323 a.C.</p>
 		</div>
 		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
+			<img src="img/maps/EgyptA4.png" style="width:100%">
+			<p class="caption">Mapa do Egito Ptolemaico, 235 a.C.</p>
 		</div>
 		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
+			<img src="img/maps/EgyptA5.png" style="width:100%">
+			<p class="caption"><i>Provincia Aegypti</i> dentro do Império Romano, c. 125 d.C.</p>
 		</div>
 		
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-
 		<div class="mySlides">
 		  <img src="img/EgyptB2.png" style="width:100%">
 			<p class="caption">Pirâmides de Gizé</p>
@@ -350,14 +281,18 @@
 			<p class="caption">Estandarte de Ur</p>
 		</div>
 		<div class="mySlides">
+			<img src="img/MesoB3.png" style="width:100%">
+			<p class="caption">Zigurate de Ur</p>
+		</div>
+		<div class="mySlides">
 			<img src="img/MesoB4.png" style="width:100%">
 			<p class="caption">Hamurabi e Shamash</p>
 		</div>
+		
 		<div class="mySlides">
 			<img src="img/MesoI1.png" style="width:100%">
 			<p class="caption">Grifo sendo atacado por herói</p>
 		</div>
-		
 		<div class="mySlides">
 			<img src="img/LevantI0.png" style="width:100%">
 			<p class="caption">Delegação de Israelitas do Obelisco Negro</p>
@@ -366,48 +301,18 @@
 			<img src="img/LevantA3.png" style="width:100%">
 			<p class="caption">Pedra de Magdala</p>
 		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
 		
 		<div class="mySlides">
 			<img src="img/IranB2.png" style="width:100%">
 			<p class="caption">Delegação de citas trazendo tributos para o palácio de Persépolis</p>
 		</div>
 		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		
-		<div class="mySlides">
-			<img src="img/GreeceB0.png" style="width:100%">
+			<img src="img/GreeceB1.png" style="width:100%">
 			<p class="caption">Taurocatapsia do palácio de Cnossos</p>
 		</div>
 		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		
-		<div class="mySlides">
 			<img src="img/RomeA0.png" style="width:100%">
 			<p class="caption">Lupa Capitolina</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
-		</div>
-		<div class="mySlides">
-			<img src="img/Placeholder.png" style="width:100%">
-			<p class="caption">Placeholder</p>
 		</div>
 
 		<a class="prev" onclick="plusSlides(-1)"><i class="fa fa-angle-left"></i></a>
