--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" href="timeline-style.css">
 		<link rel="stylesheet" href="overlays.css">
 		<link rel="stylesheet" href="css/all.css">
-		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 		<link rel="icon" href="img/Logo.png">
 	</head>
 	
@@ -540,6 +539,14 @@
 		<div id="cAlphabet" class="mapaModal">
 			<span onclick="showSidebar('cAlphabet')" class="close">&times;</span>
 			<iframe src="Alphabet.html" height="100%" width="100%"></iframe>
+		</div>
+		
+		<!-- ILUSTRAÇÕES -->
+		
+		<div id="iGreeceB1" class="mapaModal">
+			<span onclick="showSidebar('iGreeceB1')" class="close">&times;</span>
+			<img src=img/GreeceB1.png alt="Afresco de Cnossos">
+			<p class="legend">Afresco da taurocatapsia - salto sobre touros - do palácio de Cnossos, Creta. C. 1600 - 1450 a.C.</p>
 		</div>
 		
 		<script src="timeline-script.js"></script>
