--- a/index.html
+++ b/index.html
@@ -3,93 +3,89 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mapa D3</title>
+  <title>Map D3</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-	<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="mapstyle.css">
 </head>
 <body>
-  
-	<div id="toolbox">
-		<input type="range" id="year-slider" min="-3500" max="500" value="-3500" class="slider"/>
-			<!--<div id="year-label">Topographic Map</div>-->
-		<div id="year-description">Topographic Map</div>
 
-		<div id="layer-toggles">
-			<label><input type="checkbox" checked onclick="toggleClass('river')"> Rivers</label><br/>
-			<label><input type="checkbox" checked onclick="toggleClass('mountain')"> Mountains</label><br/>
-			<label><input type="checkbox" checked onclick="toggleClass('desert')"> Deserts</label>
-		</div>
-	</div>
+  <div id="toolbox">
+    <input type="range" id="year-slider" min="-3500" max="500" value="-3500" class="slider"/>
+    <div id="year-description">Topographic Map</div>
+
+    <div id="layer-toggles">
+      <label class="container"><input type="checkbox" checked onclick="toggleClass('river')"> Rivers <span class="checkmark riverchk"></span></label>
+      <label class="container"><input type="checkbox" checked onclick="toggleClass('mountain')"> Mountains <span class="checkmark mountainchk"></span></label>
+      <label class="container"><input type="checkbox" checked onclick="toggleClass('plateau')"> Plateaus <span class="checkmark plateauchk"></span></label>
+      <label class="container"><input type="checkbox" checked onclick="toggleClass('desert')"> Deserts <span class="checkmark desertchk"></span></label>
+      <label class="container"><input type="checkbox" checked onclick="toggleClass('steppe')"> Steppes <span class="checkmark steppechk"></span></label>
+      <label class="container"><input type="checkbox" checked onclick="toggleClass('taiga')"> Taiga/Tundra <span class="checkmark taigachk"></span></label>
+    </div>
+  </div>
+
+  <div id="search">
+    <input type="text" id="search-box" placeholder="Search map..." oninput="showSuggestions()" autocomplete="off" />
+    <div id="suggestions" style="position:absolute; background:white; border:1px solid #ccc; display:none; max-height:150px; overflow-y:auto;"></div>
+    <button onclick="performSearch()">Search</button>
+  </div>
 
   <button class="reset-button" onclick="resetZoom()">Reset Zoom</button>
+
   <svg viewBox="0 0 1145 780" id="map"></svg>
+
   <div id="tooltip" class="tooltip"></div>
+
   <div id="sidebar" class="sidebar">
     <button id="closeSidebar">✖</button>
     <div id="sidebar-content"></div>
   </div>
-  
-  <script>
-    const svg = d3.select("#map");
-    const g = svg.append("g");
 
-	const baseLayer = g.append("g").attr("id", "base-layer");
-	const topoLayer = g.append("g").attr("id", "topo-layer");
-	const regionLayer = g.append("g").attr("id", "region-layer");
-	
-function toggleClass(className) {
-  const elements = document.querySelectorAll(`.${className}`);
-  elements.forEach(el => {
-    if (el.style.display === "none") {
-      el.style.display = "inline";
-    } else {
-      el.style.display = "none";
-    }
+<script>
+const svg = d3.select("#map");
+const g = svg.append("g");
+const baseLayer = g.append("g").attr("id", "base-layer");
+const topoLayer = g.append("g").attr("id", "topo-layer");
+const regionLayer = g.append("g").attr("id", "region-layer");
+const tooltip = d3.select("#tooltip");
+const sidebar = d3.select("#sidebar");
+let regionData = {};
+let validYears = [];
+let searchableNames = [];
+
+const yearDescriptions = {
+  "-3300": "The world at the dawn of civilization\n3.300 BC - 2.100 BC",
+  "-2100": "Middle Bronze Age\n2.100 BC - 1.500 BC",
+  "-1500": "Late Bronze Age\n1.500 BC - 1.200 BC",
+  "-1200": "The Iron Age before the rise of the Assyrian Empire\n1.200 BC - 1.000 BC",
+  "-600": "Classical Antiquity\n800 BC - 300 BC",
+  "-300": "Hellenistic Period\n300 BC - 30 BC",
+  "100": "The Roman Empire's greatest extent\nc. AD 117 ",
+  "500": "The world after the fall of the Western Roman Empire\nc. AD 500"
+};
+
+fetch("regions.json")
+  .then(res => res.json())
+  .then(data => {
+    regionData = data;
+    validYears = Object.keys(data).filter(key => !isNaN(key)).map(Number).sort((a, b) => a - b);
+    drawBaseMap();
+    drawTopo();
+    drawPoliticalRegions(0);
   });
+
+function drawBaseMap() {
+  const baseRegions = regionData["base"];
+  for (let id in baseRegions) {
+    const region = baseRegions[id];
+    baseLayer.append("path")
+      .attr("class", "base")
+      .attr("id", `base-${id}`)
+      .attr("d", region.path)
+      .style("fill", region.color);
+  }
 }
 
-    const tooltip = d3.select("#tooltip");
-    const sidebar = d3.select("#sidebar");
-
-    let regionData = {};
-	let validYears = [];
-	const yearDescriptions = {
-      "-3300": "The world at the dawn of civilization\n3.300 BC - 2.100 BC",
-	  "-2100": "Middle Bronze Age\n2.100 BC - 1.500 BC",
-	  "-1500": "Late Bronze Age\n1.500 BC - 1.200 BC",
-      "-1200": "The Iron Age before the rise of the Assyrian Empire\n1.200 BC - 1.000 BC",
-	  "-600": "Classical Antiquity\n800 BC - 300 BC",
-	  "-300": "Hellenistic Period\n300 BC - 30 BC",
-      "100": "The Roman Empire's greatest extent\nc. AD 117 ",
-      "500": "The world after the fall of the Western Roman Empire\nc. AD 500"
-    };
-
-    fetch("regions.json")
-      .then(res => res.json())
-      .then(data => {
-        regionData = data;
-		validYears = Object.keys(data)
-      .filter(key => !isNaN(key)) // exclude 'base' or other strings
-      .map(Number)
-      .sort((a, b) => a - b);
-        drawBaseMap();
-		drawTopo();
-        drawPoliticalRegions(0);
-      });
-
-    function drawBaseMap() {
-      const baseRegions = regionData["base"];
-      for (let id in baseRegions) {
-        const region = baseRegions[id];
-        baseLayer.append("path")
-          .attr("class", "base")
-          .attr("id", `base-${id}`)
-          .attr("d", region.path)
-          .style("fill", region.color);
-      };
-    }
-	
-	function drawTopo() {
+function drawTopo() {
   const topography = regionData["topography"];
   for (let id in topography) {
     const topo = topography[id];
@@ -97,116 +93,136 @@ function toggleClass(className) {
       .attr("class", `topo ${topo.class}`)
       .attr("id", `topo-${id}`)
       .attr("d", topo.path)
-		.on("mouseover", function(event) {
-			tooltip.html(topo.name)
-            tooltip.style("display", "block")
-			})
-			.on("mousemove", (event) => {
-            tooltip.style("left", (event.pageX + 10) + "px")
-                   .style("top", (event.pageY + 10) + "px");
-          })
-          .on("mouseout", function() {
-            tooltip.style("display", "none");
-          })
-		.on("click", () => {
-            d3.select("#sidebar-content").html(
-              `<h2>${topo.name}</h2><p>${topo.sidebar.text}</p>` +
-              (topo.sidebar.image ? `<img src="${topo.sidebar.image}" alt="${topo.name}" />` : "")
-            );
-            sidebar.style("display", "block");
-          });
+      .attr("data-name", topo.name)
+      .on("mouseover", function(event) {
+        tooltip.html(topo.name || "Unnamed feature");
+        tooltip.style("display", "block");
+      })
+      .on("mousemove", (event) => {
+        tooltip.style("left", (event.pageX + 10) + "px").style("top", (event.pageY + 10) + "px");
+      })
+      .on("mouseout", () => tooltip.style("display", "none"))
+      .on("click", () => {
+        d3.select("#sidebar-content").html(
+          `<h2>${topo.name || "Unnamed Feature"}</h2>` +
+          `<p>${topo.sidebar?.text || "No information available."}</p>` +
+          (topo.sidebar?.image ? `<img src="${topo.sidebar.image}" alt="${topo.name || "Image"}" />` : "")
+        );
+        sidebar.style("display", "block");
+      });
+    if (topo.name) searchableNames.push(topo.name);
   }
 }
 
-    function drawPoliticalRegions(year) {
-      const regions = regionData[year];
-      for (let id in regions) {
-        const region = regions[id];
-        regionLayer.append("path")
-          .attr("class", region.class)
-          .attr("id", id)
-          .attr("d", region.path)
-          .style("fill", region.color)
-          .on("mouseover", function(event) {
-            tooltip.html(region.tooltip);
-            tooltip.style("display", "block");
-          })
-          .on("mousemove", (event) => {
-            tooltip.style("left", (event.pageX + 10) + "px")
-                   .style("top", (event.pageY + 10) + "px");
-          })
-          .on("mouseout", function() {
-            tooltip.style("display", "none");
-          })
-          .on("click", () => {
-            d3.select("#sidebar-content").html(
-              `<h2>${region.name}</h2>` +
-              (region.sidebar.image ? `<img src="${region.sidebar.image}" alt="${region.name}" />` : "") +
-			  `<p>${region.sidebar.text}</p>`
-            );
-            sidebar.style("display", "block");
-          });
-      }
-    }
+function drawPoliticalRegions(year) {
+  const regions = regionData[year];
+  for (let id in regions) {
+    const region = regions[id];
+    regionLayer.append("path")
+      .attr("class", region.class)
+      .attr("id", id)
+      .attr("d", region.path)
+      .attr("data-name", region.name)
+      .style("fill", region.color)
+      .on("mouseover", function(event) {
+        tooltip.html(region.tooltip || region.name || "Unnamed region");
+        tooltip.style("display", "block");
+      })
+      .on("mousemove", (event) => {
+        tooltip.style("left", (event.pageX + 10) + "px")
+               .style("top", (event.pageY + 10) + "px");
+      })
+      .on("mouseout", () => tooltip.style("display", "none"))
+      .on("click", () => {
+        d3.select("#sidebar-content").html(
+          `<h2>${region.name || "Unnamed Region"}</h2>` +
+          (region.sidebar?.image ? `<img src="${region.sidebar.image}" alt="${region.name || "Image"}" />` : "") +
+          `<p>${region.sidebar?.text || "No information available."}</p>`
+        );
+        sidebar.style("display", "block");
+      });
+    if (region.name) searchableNames.push(region.name);
+  }
+}
 
-    document.getElementById("closeSidebar").onclick = () => {
-      sidebar.style("display", "none");
-    };
+document.getElementById("closeSidebar").onclick = () => sidebar.style("display", "none");
 
 const slider = document.getElementById("year-slider");
-//const yearLabel = document.getElementById("year-label");
 const yearDescription = document.getElementById("year-description");
+slider.addEventListener("input", () => {
+  const rawYear = parseInt(slider.value);
+  const firstYear = validYears[0];
+  if (rawYear < firstYear) {
+    baseMap();
+  } else {
+    let closestYear = validYears.reduce((prev, curr) =>
+      Math.abs(curr - rawYear) < Math.abs(prev - rawYear) ? curr : prev
+    );
+    slider.value = closestYear;
+    yearDescription.textContent = yearDescriptions[closestYear] || `Year: ${closestYear}`;
+    updateMap(closestYear);
+    document.title = `Map - ${closestYear}`;
+  }
+});
 
-// == SLIDER ==
-	slider.addEventListener("input", () => {
-	  const rawYear = parseInt(slider.value);
-	  const firstYear = validYears[0];
-
-	  if (rawYear < firstYear) {
-		// Show topographic-only map
-		//yearLabel.textContent = "Topographic Map";
-		yearDescription.textContent = "Topographic Map";
-		baseMap(0);
-	  } else {
-		// Find nearest valid year
-		let closestYear = validYears.reduce((prev, curr) => 
-		  Math.abs(curr - rawYear) < Math.abs(prev - rawYear) ? curr : prev
-		);
-
-		// Snap slider to that year
-		slider.value = closestYear;
-		//yearLabel.textContent = `Year: ${closestYear}`;
-		yearDescription.textContent = yearDescriptions[closestYear] || "";
-		updateMap(closestYear);
-	  }
-	});
-
-// == LAYERING ==
-    function updateMap(year) {
-      regionLayer.selectAll("*").remove();
-      drawPoliticalRegions(year);
-		d3.selectAll(".topo")
-			.classed("topo2", true)
+function updateMap(year) {
+  regionLayer.selectAll("*").remove();
+  drawPoliticalRegions(year);
+  d3.selectAll(".topo").classed("topo2", true);
 }
 
-    function baseMap(year) {
-      regionLayer.selectAll("*").remove();
-		d3.selectAll(".topo")
-			.classed("topo2", false)
+function baseMap() {
+  regionLayer.selectAll("*").remove();
+  d3.selectAll(".topo").classed("topo2", false);
+  yearDescription.textContent = "Topographic Map";
 }
 
-	// === ZOOM ===
-	const zoom = d3.zoom()
-	  .scaleExtent([0.5, 8])
-	  .on("zoom", (event) => {
-		g.attr("transform", event.transform);
-	  });
+const zoom = d3.zoom().scaleExtent([0.5, 8]).on("zoom", event => g.attr("transform", event.transform));
+svg.call(zoom);
 
-	svg.call(zoom);
+function resetZoom() {
+  svg.transition().duration(750).call(zoom.transform, d3.zoomIdentity);
+}
 
-    function resetZoom() {
-      svg.transition().duration(750).call(zoom.transform, d3.zoomIdentity);
+function performSearch() {
+  const query = document.getElementById("search-box").value.toLowerCase().trim();
+  if (!query) return;
+  d3.selectAll("path").classed("highlighted", false);
+  let matchFound = false;
+
+  d3.selectAll("path").each(function() {
+    const el = d3.select(this);
+    const name = (el.attr("data-name") || "").toLowerCase();
+    if (name.includes(query)) {
+      el.classed("highlighted", true);
+      matchFound = true;
+      const bbox = this.getBBox();
+      svg.transition().duration(750).call(
+        zoom.transform,
+        d3.zoomIdentity.translate(svg.attr("width") / 2 - bbox.x - bbox.width / 2, svg.attr("height") / 2 - bbox.y - bbox.height / 2).scale(2)
+      );
     }
-  </script>
+  });
+
+  if (!matchFound) alert("No match found.");
+}
+
+document.getElementById("search-box").addEventListener("keypress", e => {
+  if (e.key === "Enter") performSearch();
+});
+
+function showSuggestions() {
+  const input = document.getElementById("search-box");
+  const suggestions = document.getElementById("suggestions");
+  const query = input.value.toLowerCase();
+  if (!query) return suggestions.style.display = "none";
+
+  const matches = searchableNames.filter(name => name.toLowerCase().includes(query)).slice(0, 10);
+  if (matches.length === 0) return suggestions.style.display = "none";
+
+  suggestions.innerHTML = matches.map(m => `<div style="padding:4px; cursor:pointer;" onclick="document.getElementById('search-box').value='${m}'; performSearch(); suggestions.style.display='none';">${m}</div>`).join("");
+  suggestions.style.display = "block";
+}
+</script>
 </body>
 </html>
