--- a/Hare/contato.html
+++ b/Hare/contato.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<meta charset="UTF-8" />
 	<title>Lebre Saltitante</title>
 	<link rel="stylesheet" href="style.css" />
 	<link rel="icon" href="img/lebre32.png"/>
