--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 					<div class="dropdown-content">
 						<div id="language-select">
 							<input type="radio" id="pt" name="lang" value="pt">
-							<label for="pt"><div class="option"><img src="img\pt.png"></div></label><br>
+							<label for="pt"><div class="option"><img alt="PT-BR" src="img\pt.png"></div></label><br>
 							<input type="radio" id="en" name="lang" value="en">
-							<label for="en"><div class="option"><img src="img\en.png"></div></label>
+							<label for="en"><div class="option"><img alt="EN-US" src="img\en.png"></div></label>
 						</div>
 					</div>
 				</div>
